INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(XdmfUtilSource
    XdmfFortran
    XdmfDiff
)

SET(XdmfSTLConverterSource
    XdmfSTLConverter
)

IF(XDMF_WRAP_PYTHON)
  ADD_LIBRARY(_XdmfUtils MODULE XdmfUtilsPython.cxx)
  TARGET_LINK_LIBRARIES(_XdmfUtils XdmfUtils)
  IF(WIN32 OR APPLE)
    TARGET_LINK_LIBRARIES(_XdmfUtils ${PYTHON_LIBRARY})
  ENDIF(WIN32 OR APPLE)
  SET(PYTHON_VERSION_NAME "python")
  GET_FILENAME_COMPONENT(PYTHON_VERSION_NAME ${PYTHON_INCLUDE_PATH} NAME)
  SET_TARGET_PROPERTIES(_XdmfUtils PROPERTIES PREFIX "")
  ADD_DEPENDENCIES(_XdmfUtils XdmfUtils)
  INSTALL(FILES XdmfUtils.py
      DESTINATION ${XDMF_WRAP_PYTHON_INSTALL_PY_DIR}
      COMPONENT Runtime
      )
ENDIF(XDMF_WRAP_PYTHON)

#SET(swig_extra_args ${swig_extra_args} "-DXDMF_BUILD_UTILS")
   	
ADD_LIBRARY(XdmfUtils ${LIBTYPE} ${XdmfUtilSource})
TARGET_LINK_LIBRARIES(XdmfUtils Xdmf)
ADD_EXECUTABLE(XdmfDiff XdmfDiffUtil)
TARGET_LINK_LIBRARIES(XdmfDiff XdmfUtils)

IF(NOT XDMF_INSTALL_NO_LIBRARIES)
  INSTALL(TARGETS XdmfDiff XdmfUtils
    RUNTIME DESTINATION ${XDMF_INSTALL_BIN_DIR_CM24} COMPONENT Runtime
    LIBRARY DESTINATION ${XDMF_INSTALL_LIB_DIR_CM24} COMPONENT Runtime
    ARCHIVE DESTINATION ${XDMF_INSTALL_LIB_DIR_CM24} COMPONENT Development)
  INSTALL(
    FILES XdmfSTLConverter.txx
    DESTINATION ${XDMF_INSTALL_INCLUDE_DIR_CM24})
  IF(XDMF_WRAP_PYTHON)
    INSTALL(
        TARGETS _XdmfUtils
        DESTINATION
        ${XDMF_WRAP_PYTHON_INSTALL_LIB_DIR})
  ENDIF(XDMF_WRAP_PYTHON)
ENDIF(NOT XDMF_INSTALL_NO_LIBRARIES)
