ADD_EXECUTABLE(VTKTest VTKTest.cxx)
TARGET_LINK_LIBRARIES(VTKTest vtkXdmf)
IF(VTK_WRAP_TCL)
  TARGET_LINK_LIBRARIES(VTKTest vtkXdmfTCL)
ENDIF(VTK_WRAP_TCL)
IF(VTK_WRAP_PYTHON)
  TARGET_LINK_LIBRARIES(VTKTest vtkXdmfPython ${PYTHON_LIBRARY})
ENDIF(VTK_WRAP_PYTHON)
ADD_TEST(VTKTest ${EXECUTABLE_OUTPUT_PATH}/VTKTest ${Xdmf_SOURCE_DIR}/Data/Data/Test1.xmf)
